# scue

./: .gitignore  AGENTS.md  AGENT_BOOTSTRAP.md  CLAUDE.md  LEARNINGS.md  MIGRATION_CHECKLIST.md  README.md  app.py  beat-link-trigger-config.md  pyproject.toml  requirements.txt  setup-agent-workflow.sh
.agent/: annotation-followup.md  incidents.jsonl  project-observations.md  runs.jsonl  state-snapshot.json  tasks.jsonl  verification-pending.md
.claude/: launch.json  settings.json  settings.local.json
analyzer/: changepoint.py  edm_classifier.py  features.py  pipeline.py  structure.py  waveform.py
bridge-java/: build.gradle  settings.gradle
cache/: scue.db
config/: bridge.yaml  detectors.yaml  server.yaml  usb.yaml  waveform-presets.yaml
data/: scue.db
docs/: ARCHITECTURE.md  BRIDGE_CONTRACT.md  BRIDGE_STATE_FLOWS.md  CONTRACTS.md  DECISIONS.md  DIVERGENCE_ANALYSIS.md  FUTURE_AUDIO_FINGERPRINTING (1).md  MILESTONES.md  STATUS_2026-03-17.md  bridge-java-spec.md  interfaces.md  strata-pipeline.md
frontend/: CLAUDE.md  package-lock.json  package.json
handoffs/: README.md
pioneer/: network.py  osc_receiver.py  prodj_link.py  state.py
preambles/: ARCHITECT.md  COMMON_RULES.md  DESIGNER.md  DEVELOPER.md  ORCHESTRATOR.md  QA_TESTER.md  RESEARCHER.md  VALIDATOR.md
research/: beatlink-dlp-fix-investigation.md  dlp-track-id-reliability.md  findings-anlz-waveform-formats.md  findings-dlp-dbserver-protocol-namespaces.md  findings-event-detection-m7.md  findings-hardware-topology-audio-capture.md  findings-layer2-cue-generation-architecture.md  (+17 more)
scue/: main.py  (+1 more)
(+586 files in other folders)
